# time-control

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/time_control/: time_control.py
tests/: test_cli.py
