[project]
name = "time-control"
version = "0.0.4" 
authors = [{name="Matt Rhoads", email="mrhoads1@gmail.com"}]
description = "Simple Python CLI for printing time in multiple time zones."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3"]
keywords = ["timezone", "time", "control", "cli"]
dependencies = ["arrow", "click"]

[project.urls]
"Homepage" = "https://thing"

[project.scripts]
time-control = "time_control.time_control:main"

[project.optional-dependencies]
dev = ["build", "pytest", "twine"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

